crates/sui-prover/tests/snapshots/loop_invariant/external_bool_with_ensures.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Bool loop invariant functions must not call requires, ensures, or asserts
  ┌─ tests/inputs/loop_invariant/external_bool_with_ensures.fail.move:6:1
  │  
6 │ ╭ fun loop_inv(i: u64, n: u64): bool {
7 │ │     ensures(i <= n);
8 │ │     i <= n
9 │ │ }
  │ ╰─^
