crates/sui-prover/tests/snapshots/loop_invariant/external_clone.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Loop invariant function loop_invariant_external_clone::loop_inv expects 'old' parameter 'p' which is not found in function loop_invariant_external_clone::test_spec
   ┌─ tests/inputs/loop_invariant/external_clone.fail.move:11:1
   │  
11 │ ╭ fun test_spec(mut n: u64): u128 {
12 │ │     let mut s: u128 = 0;
13 │ │ 
14 │ │     let old_n: &u64 = clone!(&n);
   · │
21 │ │     s
22 │ │ }
   │ ╰─^
