crates/sui-prover/tests/snapshots/loop_invariant/external_invalid_arg_name_macro.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Loop invariant function loop_invariant_external_invalid_arg_name_macro_fail::loop_inv expects parameter 'compare' which is not found in function loop_invariant_external_invalid_arg_name_macro_fail::test_spec.
Available variables: ( n: u64, i: u64, s: u128 )
   ┌─ tests/inputs/loop_invariant/external_invalid_arg_name_macro.move:37:1
   │  
37 │ ╭ fun test_spec(n: u64): u128 {
38 │ │     let s = test_loop!(n);
39 │ │     empty_macro!();
40 │ │     let s2 = test_loop_2!(n);
   · │
44 │ │     res
45 │ │ }
   │ ╰─^
