crates/sui-prover/tests/snapshots/loop_invariant/external_no_target.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Target struct 'loop' not found in module '0x42::loop_invariant_external_no_target_fail'
  ┌─ tests/inputs/loop_invariant/external_no_target.fail.move:6:1
  │  
6 │ ╭ fun loop_inv(i: u64, n: u64, s: u128): bool {
7 │ │     i <= n && (s == (i as u128) * ((i as u128) + 1) / 2)
8 │ │ }
  │ ╰─^
