crates/sui-prover/tests/snapshots/loop_invariant/external_return_type.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/loop_invariant/external_return_type.fail.move:6:14
  │
6 │ fun loop_inv(i: u64, n: u64, s: u128): u64 {
  │              ^ Unused parameter 'i'. Consider removing or prefixing with an underscore: '_i'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused variable
  ┌─ tests/inputs/loop_invariant/external_return_type.fail.move:6:30
  │
6 │ fun loop_inv(i: u64, n: u64, s: u128): u64 {
  │                              ^ Unused parameter 's'. Consider removing or prefixing with an underscore: '_s'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Loop invariant functions must return a boolean value
  ┌─ tests/inputs/loop_invariant/external_return_type.fail.move:6:1
  │  
6 │ ╭ fun loop_inv(i: u64, n: u64, s: u128): u64 {
7 │ │     //(i <= n, (s == (i as u128) * ((i as u128) + 1) / 2))
8 │ │     n
9 │ │ }
  │ ╰─^
