crates/sui-prover/tests/snapshots/loop_invariant/external_type_mismatch.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Loop invariant function loop_invariant_external_type_mismatch_fail::loop_inv expects some type for 's' parameter in function loop_invariant_external_type_mismatch_fail::test_spec
   ┌─ tests/inputs/loop_invariant/external_type_mismatch.fail.move:11:1
   │  
11 │ ╭ fun test_spec(n: u64): u128 {
12 │ │     let mut s: u128 = 0;
13 │ │     let mut i = 0;
14 │ │ 
   · │
21 │ │     s
22 │ │ }
   │ ╰─^
