crates/sui-prover/tests/snapshots/loop_invariant/external_void_with_requires.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Void loop invariant functions must not call requires or asserts
  ┌─ tests/inputs/loop_invariant/external_void_with_requires.fail.move:6:1
  │  
6 │ ╭ fun loop_inv(i: u64, n: u64) {
7 │ │     requires(i <= n);
8 │ │     ensures(i <= n);
9 │ │ }
  │ ╰─^
